--- a/Pagina1/index.html
+++ b/Pagina1/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    <h1 style="background-color: #ff5050;">Página 1</h1>
+    <h1 class="title-page-1">Página 1</h1>
     <button onclick="alertando('Olá')">Click Here 1</button>
     <button onclick="alertando('Pessoa')">Click Here 2</button>
     <button onclick="alertando('Bonita')">Click Here 3</button>
