--- a/Pagina2/index.html
+++ b/Pagina2/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    <h1 style="background-color: #50ff50;">Página 2</h1>
+    <h1 class="title-page-2">Página 2</h1>
 </body>
 </html>
